--- a/A1.ipynb
+++ b/A1.ipynb
@@ -381,7 +381,7 @@
         "\n",
         "\n",
         "3.   \n",
-        "S. l Har-Peled, 2009, ‘Shannon’s theorem’, viewed 19 August 2019, \n",
+        "S.Har-Peled, 2009, ‘Shannon’s theorem’, viewed 19 August 2019, \n",
         "< https://courses.engr.illinois.edu/cs573/fa2009/files/lec/28_shannon.pdf > \n",
         "\n",
         "\n",
