使用 Colaboratory 创建

--- a/A1.ipynb
+++ b/A1.ipynb
@@ -394,6 +394,17 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A_NaCM7m7i8p",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Report Hyperlink:\n",
+        "[https://colab.research.google.com/github/HaozheTong/UTS_ML_2019_SID13019841_ASSIGNMENT/blob/master/A1.ipynb]"
+      ]
     }
   ]
 }
