--- a/A1.ipynb
+++ b/A1.ipynb
@@ -374,17 +374,17 @@
       "source": [
         "\n",
         "\n",
-        "1. M.P. Frank. 2002, ‘The physical limits of computing’, Computing in Science & Engineering, Vol.4, no.3.\n",
+        "M.P. Frank. 2002, ‘The physical limits of computing’, Computing in Science & Engineering, Vol.4, no.3.\n",
         "\n",
         "\n",
-        "2. R.AffeldtEmail,M Hagiwara,J Sénizergues, 2014, ‘Formalization of Shannon’s Theorems‘, Journal of Automated Reasoning, Vol 53,No.1, pp 63–103. \n",
+        "R.AffeldtEmail,M Hagiwara,J Sénizergues, 2014, ‘Formalization of Shannon’s Theorems‘, Journal of Automated Reasoning, Vol 53,No.1, pp 63–103. \n",
         "\n",
         "\n",
-        "3. S.Har-Peled, 2009, ‘Shannon’s theorem’, viewed 19 August 2019, \n",
+        "S.Har-Peled, 2009, ‘Shannon’s theorem’, viewed 19 August 2019, \n",
         "< https://courses.engr.illinois.edu/cs573/fa2009/files/lec/28_shannon.pdf > \n",
         "\n",
         "\n",
-        "4. T.H. Liew, L. Hanzo. 2002, ‘Space-time codes and concatenated channel codes for wireless communications’, Proceedings of the IEEE, Vol.90, no.2\n",
+        "T.H. Liew, L. Hanzo. 2002, ‘Space-time codes and concatenated channel codes for wireless communications’, Proceedings of the IEEE, Vol.90, no.2\n",
         "\n",
         "\n",
         "\n",
