使用 Colaboratory 创建

--- a/A1.ipynb
+++ b/A1.ipynb
@@ -28,6 +28,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "9Et-MTt5_3Mr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Haozhe.Tong  SID: 13019841\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tM2r_vwS6QT3",
         "colab_type": "text"
       },
