--- a/31005_ML_Assignment_3.ipynb
+++ b/31005_ML_Assignment_3.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of 31005_ML_Assignment_3.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "name": "31005_ML_Assignment_3.ipynb",
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -13,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/HaozheTong/UTS_ML_2019_SID13019841_ASSIGNMENT/blob/master/31005_ML_Assignment_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
